--- a/src/styles/pages/Lessons/components/imageNode.css
+++ b/src/styles/pages/Lessons/components/imageNode.css
@@ -85,7 +85,7 @@
     }
 
     &:hover {
-      background-color: var(--accent-hover);
+      background-color: var(--accent);
     }
   }
 }
